Refactor app.py and index.html for video clip functionality

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,11 +15,11 @@
 	<section class="py-5 text-center container">
 		<div class="row py-lg-5">
 		  	<div class="col-lg-6 col-md-8 mx-auto">
-				<h1 class="fw-light">Album example</h1>
-				<p class="lead text-body-secondary">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+				<h1 class="fw-light">Live Feed</h1>
+				<p class="lead text-body-secondary">[LIVE FEED HERE]</p>
 				<p>
-			  		<a href="#" class="btn btn-primary my-2">Main call to action</a>
-			  		<a href="#" class="btn btn-secondary my-2">Secondary action</a>
+			  		<a href="#" class="btn btn-primary my-2">Start Live Feed</a>
+			  		<a href="#" class="btn btn-secondary my-2">End Live Feed</a>
 				</p>
 		  </div>
 		</div>
@@ -28,23 +28,25 @@
 	<div class="py-5 bg-body-tertiary">
 		<div class="container">
 			<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+				{% for clip in clips %}
 				<div class="col">
 					<div class="card shadow-sm">
 						<video controls>
-							<source src="{{ url_for('static', filename='test_vid.mp4')}}" type="video/mp4">
+							<source src="{{ url_for('static', filename=clip)}}" type="video/mp4">
 						</video>
 						<div class="card-body">
-							<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+							<p class="card-text">This is a clip named {{ clip }}.</p>
 							<div class="d-flex justify-content-between align-items-center">
 								<div class="btn-group">
 									<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
 									<button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
 								</div>
-								<small class="text-body-secondary">9 mins</small>
+								<small class="text-body-secondary">Detected: {{ clip }}</small>
 							</div>
 						</div>
 					</div>
 				</div>
+				{% endfor %}
 			</div>
 		</div>
 	</div>
