--- a/templates/base.html
+++ b/templates/base.html
@@ -5,10 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
 		rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-	{% block head %}{% endblock %}
+	<title>MySentry Dashboard</title>
 </head>
 <body>
-	{% block body %}{% endblock %}
+	<!-- Navigation bar -->
+	<nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="{{ url_for('index') }}"><strong>MySentry</strong></a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link active" href="{{ url_for('clips') }}"><strong>Clips</strong></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link active" href="#"><strong>Settings</strong></a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+	{% block body %}
+	{% endblock %}
 </body>
 <!-- Bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" 
