--- a/templates/base.html
+++ b/templates/base.html
@@ -20,9 +20,9 @@
 					<li class="nav-item">
 						<a class="nav-link active" href="{{ url_for('clips') }}"><strong>Clips</strong></a>
 					</li>
-					<li class="nav-item">
+					<!-- <li class="nav-item">
 						<a class="nav-link active" href="#"><strong>Settings</strong></a>
-					</li>
+					</li> -->
 				</ul>
 			</div>
 		</div>
