--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 	<section class="py-5 text-center container">
 		<div class="row py-lg-5">
 		  	<div class="col-lg-6 col-md-8 mx-auto">
-				<h1 class="fw-light">Camera Feed</h1>
+				<h1 class="fw-light">Live View</h1>
 				{% if camera_started %}
                 	<img src="{{ url_for('video_feed') }}" />
             	{% else %}
