--- a/templates/index.html
+++ b/templates/index.html
@@ -1,35 +1,136 @@
 {% extends 'base.html' %}
 {% block body %}
-	<!-- Camera Feed -->
-	<section class="py-5 text-center container">
+	<!-- Title Board -->
+	<div class="container-fluid py-5 text-center title-board">
 		<div class="row py-lg-5">
 		  	<div class="col-lg-6 col-md-8 mx-auto">
-				<h1 class="fw-light">Live View</h1>
-				{% if camera_started %}
-                	<img src="{{ url_for('video_feed') }}" />
-            	{% else %}
-                	<p>Camera is not connected yet. Please enter the IP address of the camera below.</p>
-           		 {% endif %}
-				<!-- Buttons to control the camera and motion detection -->
-				<div class="container pt-3">
-					<form action="{{ url_for('start_camera') }}" method="post" class="row g-2">
-						<div class="col-auto">
-							<label for="camera_url" class="col-form-label">URL</label>
-						</div>
-						<div class="col">
-							<input type="text" class="form-control" id="camera_url" name="camera_url" required>
-						</div>
-						<div class="col-auto">
-							<button type="submit" class="btn btn-outline-primary">Connect</button>
-						</div>
-					</form>
-					{% if camera_started %}
-					<form action="{{ url_for('start_motion_detection') }}" method="post" class="mt-3">
-						<button type="submit" class="btn btn-outline-primary">Start Motion Detection</button>
-					</form>
-					{% endif %}
-				</div>
-		  </div>
+				<h1 class="text-black"><i class="bi bi-broadcast"></i>&nbspLive View</h1>
+			</div>
 		</div>
-	</section>
+	</div>
+	<!-- Camera Feed, buttons to control the camera and motion detection -->
+	<div class="container py-5">
+		<div class="col-lg-8 mx-auto text-center">
+			{% if camera_started %}
+				<div class="position-relative">
+					<img id="frame" class="w-100 rounded" src="{{ url_for('video_feed') }}"/>
+					<canvas id="videoCanvas" class="w-100 rounded position-absolute top-0 start-0 border border-dark shadow"></canvas>
+				</div>
+                <div class="d-flex justify-content-evenly pt-4 pb-2">
+                    <button id="toggleMotionButton" class="btn btn-outline-primary">
+						<i class="bi bi-play-circle"></i>&nbspStart Motion Detection
+                    </button>
+					<button id="clearButton" class="btn btn-outline-danger"><i class="bi bi-x-circle"></i>&nbspClear Zones</button>
+                </div>
+				<hr class="border-2 border-dark">
+				<p>Enter a different IP address to switch cameras.</p>
+			{% else %}
+				<p>Camera is not connected yet. Please enter the IP address of the camera below.</p>
+			{% endif %}
+			<div class="row justify-content-center">
+				<div class="col-lg-8">
+					<form action="{{ url_for('start_camera') }}" method="post">
+						<div class="input-group">
+							<div class="input-group-text">URL</div>
+							<input type="text" class="form-control" id="camera_url" name="camera_url" required>
+							<button type="submit" class="btn btn-outline-primary"><i class="bi bi-box-arrow-in-right"></i>&nbspConnect</button>
+						</div>
+					</form>
+				</div>
+			</div>			
+		</div>
+	</div>
+	<script>
+		let canvas = document.getElementById('videoCanvas');
+		if (canvas) {
+			let ctx = canvas.getContext('2d');
+			let frame = document.getElementById('frame');
+			let startX, startY, endX, endY;
+			let drawing = false;
+			let exclusionZones = [];
+
+			function setCanvasSize() {
+				canvas.width = frame.clientWidth;
+				canvas.height = frame.clientHeight;
+			}
+
+			// Set canvas size on load and resize
+			frame.onload = setCanvasSize;
+
+			function getMousePos(canvas, evt) {
+				let rect = canvas.getBoundingClientRect();
+				return {
+					x: evt.clientX - rect.left,
+					y: evt.clientY - rect.top
+				};
+			}
+
+			canvas.addEventListener('mousedown', (e) => {
+				let pos = getMousePos(canvas, e);
+				startX = pos.x;
+				startY = pos.y;
+				drawing = true;
+			});
+
+			canvas.addEventListener('mousemove', (e) => {
+				if (!drawing) return;
+				let pos = getMousePos(canvas, e);
+				endX = pos.x;
+				endY = pos.y;
+				ctx.clearRect(0, 0, canvas.width, canvas.height);
+				ctx.fillStyle = 'rgba(255, 0, 0, 0.2)';
+				ctx.fillRect(startX, startY, endX - startX, endY - startY);
+				exclusionZones.forEach(zone => {
+					ctx.fillRect(zone.startX, zone.startY, zone.endX - zone.startX, zone.endY - zone.startY);
+				});
+			});
+
+			canvas.addEventListener('mouseup', () => {
+				drawing = false;
+				exclusionZones.push({ startX, startY, endX, endY });
+				exclusionZones.forEach(zone => {
+					ctx.fillRect(zone.startX, zone.startY, zone.endX - zone.startX, zone.endY - zone.startY);
+				});
+				// Send exclusion zones to the server
+				fetch('/set_exclusion_zones', {
+					method: 'POST',
+					headers: {
+						'Content-Type': 'application/json'
+					},
+					body: JSON.stringify({ zones: exclusionZones })
+				});
+			});
+
+			// Clear all drawings
+            document.getElementById('clearButton').addEventListener('click', () => {
+                exclusionZones = [];
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
+                fetch('/clear_exclusion_zones', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    }
+                });
+            });
+
+			// Toggle motion detection without reloading
+			document.getElementById('toggleMotionButton').addEventListener('click', () => {
+			fetch('/toggle_motion_detection', {
+				method: 'POST'
+			}).then(response => response.json())
+				.then(data => {
+					let button = document.getElementById('toggleMotionButton');
+					if (data.motion_detection_active) {
+						button.innerHTML = '<i class="bi bi-stop-circle"></i>&nbspStop Motion Detection';
+						button.classList.remove('btn-outline-primary');
+						button.classList.add('btn-outline-danger');
+					} else {
+						button.innerHTML = '<i class="bi bi-play-circle"></i>&nbspStart Motion Detection';
+						button.classList.remove('btn-outline-danger');
+						button.classList.add('btn-outline-primary');
+					}
+				});
+            });
+		}
+	</script>
 {% endblock %}
