--- a/templates/base.html
+++ b/templates/base.html
@@ -7,9 +7,9 @@
 		rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 	<title>MySentry Dashboard</title>
-	<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
+	<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/main.css') }}">
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 	<!-- Navigation bar -->
 	<nav class="navbar navbar-expand-lg navbar navbar-dark shadow">
 		<div class="container">
@@ -22,9 +22,6 @@
 					<li class="nav-item">
 						<a class="nav-link active" href="{{ url_for('clips') }}"><i class="bi bi-play-btn"></i>&nbsp<strong>Clips</strong></a>
 					</li>
-					<!-- <li class="nav-item">
-						<a class="nav-link active" href="#"><strong>Settings</strong></a>
-					</li> -->
 				</ul>
 			</div>
 		</div>
