--- a/templates/base.html
+++ b/templates/base.html
@@ -1,37 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<!-- Meta Tags -->
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<!-- Page Title -->
+	<title>MySentry Dashboard</title>
+
+	<!-- Bootstrap CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
 		rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	
+	<!-- Bootstrap Icons -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-	<title>MySentry Dashboard</title>
+
+	<!-- Linking a custom stylesheet located in the static/css folder -->
 	<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/main.css') }}">
 </head>
+
 <body class="d-flex flex-column min-vh-100">
-	<!-- Navigation bar -->
+	 <!-- Navigation Bar -->
 	<nav class="navbar navbar-expand-lg navbar navbar-dark shadow">
 		<div class="container">
+			<!-- Brand name leads back to the index route -->
 			<a class="navbar-brand" href="{{ url_for('index') }}"><i class="bi bi-camera"></i>&nbsp<strong>MySentry</strong></a>
+
+			<!-- Navbar Toggle for mobile view -->
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
+			
+			<!-- Navbar Links -->
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
+					<!-- Active link indicating the current page -->
 					<li class="nav-item">
-						<a class="nav-link active" href="{{ url_for('clips') }}"><i class="bi bi-play-btn"></i>&nbsp<strong>Clips</strong></a>
+						<a class="nav-link active" href="{{ url_for('clips') }}">
+							<i class="bi bi-play-btn"></i>&nbsp<strong>Clips</strong>
+						</a>
 					</li>
 				</ul>
 			</div>
 		</div>
 	</nav>
+
+	<!-- Main Content -->
+    <!-- This block will be replaced by specific content on different pages -->
 	{% block body %}
 	{% endblock %}
 </body>
+
+<!-- Footer -->
 <footer class="py-3 mt-auto">
     <div class="container">
         <div class="row">
+			<!-- Footer text -->
             <div class="col-md-6">
                 <p class="mb-0 text-white">2024 MySentry. CM3070 Final Project.</p>
             </div>
@@ -39,7 +63,7 @@
     </div>
 </footer>
 
-<!-- Bootstrap -->
+<!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" 
 	integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </html>
